trying to fix the blur on firefox

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,6 +23,9 @@
       object-fit: cover;
       object-position: center;
     }
+    // &:hover {
+    //   filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    // }
   }
   & .card-info {
     color: transparent;
@@ -30,7 +33,7 @@
     padding: 20px;
     backdrop-filter: blur(0px);
     backdrop-filter: grayscale(100%);
-    backdrop-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    // backdrop-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
     transition: all 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -50,6 +53,7 @@
   &:hover .background {
     // filter: blur(10px);
     transform: scale(1);
+
     // filter: grayscale(0%);
     // -webkit-filter: grayscale(0%);/* For Webkit browsers */
     // filter:grayscale(0%);/* For IE 6 - 9 */
